Mon Apr 19 06:09:41 1993  Jim Kingdon  (kingdon@cygnus.com)

	* libbfd.c: bfd_put*: Remove casts to bfd_vma.

Fri Apr 16 17:49:27 1993  Jim Kingdon  (kingdon@cygnus.com)

	* aoutf1.h (internal_sunos_core): Make c_stacktop a bfd_vma.
	(swapcore_sparc): Make sp a bfd_vma.

Thu Apr 15 09:09:18 1993  Jim Kingdon  (kingdon@cygnus.com)

	* libbfd.c: Add signed versions of bfd_{h_,}{get,put}_signed_<size>.
	libbfd.c, libbfd-in.h: Add _do*signed*.
	targets.c, all targets: Add bfd*signed*.
	bfd-in.h: Add bfd_signed_vma.  Add comments.

	* bfd-in.h (bfd_error), bfd.c (bfd_errmsgs): Add file_truncated.

	* format.c (bfd_check_error): Check error return from
	_bfd_check_format routines.

Wed Apr 14 23:48:25 1993  Jim Kingdon  (kingdon@cygnus.com)

	* rs6000-core.c (rs6000coff_core_p): Improve error checking and
	recognize .data section if present. 

Thu Apr 15 01:00:29 1993  John Gilmore  (gnu@cygnus.com)

	* aoutx.h (aout_*_adjust_sizes_and_vmas):  Avoid `sanity'
	check for the case where the user sets the address of the BSS
	section (and the file header can't specify this).  Let the user
	set it wherever they want, regardless of what goes in the header.

	* ieee.c (ieee_slurp_sections):  Pass all ieee section names
	straight through into BFD sections.  Add comments.

Wed Apr 14 20:34:54 1993  John Gilmore  (gnu@cygnus.com)

	Cleanup in preparation for better 64-bit host support.

	* bfd-in.h (bfd_64_type):  Remove.
	* libbfd.c (_do_getb64, _do_putb64):  Use bfd_vma, not bfd_64_type.

	* bfd-in.h (bfd_size):  Remove.

	* bfd-in.h (bfd_offset):  Remove, after fixing ld/ldlang.[ch].

	* bfd-in.h (bfd_word):  Remove.
	* reloc.c (reloc_howto_type):  Replace bfd_word with bfd_vma.

	* bfd-in.h (rawdata_offset):  Remove.
	* reloc.c (arelent):  Replace rawdata_offset with bfd_size_type.
	(bfd_perform_relocation):  Lint.
	(enum bfd_reloc_status):  Comment cleanup.

	* aout-adobe.c, cpu-h8300.c, mipsbsd.c, srec.c: lint -Wall.
