@@ -1,3 +1,10 @@
+Sat Apr 17 00:40:12 1993  Jim Kingdon  (kingdon at calvin)
+
+	* readline.c, history.c: Don't include sys/types.h; sysdep.h does.
+
+	* config/mh-sysv: Define TIOCGWINSZ_BROKEN.
+	readline.c: Check it.
+
 Wed Mar 24 02:06:15 1993  david d `zoo' zuhn  (zoo at poseidon.cygnus.com)
 
 	* Makefile.in: add installcheck & dvi targets
@@ -5,7 +12,8 @@ Wed Mar 24 02:06:15 1993  david d `zoo' zuhn  (zoo at poseidon.cygnus.com)
 Fri Mar 12 18:36:53 1993  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)
 
 	* configure.in: recognize *-*-solaris2* instead of *-*-solaris* (a
-	number of people want to call SunOS 4.1.2 "solaris1.0" and get it right)
+	number of people want to call SunOS 4.1.2 "solaris1.0"
+	and get it right)
 
 Tue Mar  2 21:25:36 1993  Fred Fish  (fnf@cygnus.com)
 
